updated testOutput to resolve code warning and call getFirst from the memory elements rather than get(0)